# claude-prompts

./: .gitignore  AUTO_INSTALL_README.md  BUILD_INSTALL_TEST_SUMMARY.md  Claude.md  README.md  VERSION_UPDATE_SUMMARY.md  analyze_with_graph.py  code_graph_indexer.py  ensmallen_demo.py  final_ensmallen_demo.py  install-autoit-support.bat  install-autoit-support.py  install-autoit-support.sh  simple-autoit-installer.py  simple_ensmallen_demo.py  test_sample.au3  verify_autoit_installation.py
claude_code_indexer/: .coveragerc  .gitignore  .god_mode_proxy_request.json  ARCHITECTURE_GUIDELINES.md  BENCHMARK_RESULTS.md  CCI_ALIAS_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_COMPLETE_TEMPLATE.md  CLAUDE_ENGINEERING_PRINCIPLES.md  CLAUDE_TEMPLATE_ENHANCED.md  ENGINEERING_QUICK_REFERENCE.md  FINAL_PERFORMANCE_REPORT.md  GOD_MODE_DEMO.md  GOD_MODE_LOCAL_DEMO.md  GRAPH_BUILDING_ROOT_CAUSE.md  INSTALL.md  LICENSE  LLM_ENHANCEMENT_GUIDE.md  LLM_MEMORY_GUIDE.md  LLM_MEMORY_REVOLUTION.md  MANIFEST.in  MCP_AUTO_START.md  MCP_FALLBACK_FEATURE.md  MCP_PERFORMANCE_SOLUTION.md  MCP_PERSISTENT_DAEMON_COMPLETE.md  MCP_TEST_RESULTS.md  MULTI_PROJECT_ANALYSIS.md  NOT_NULL_FIX.md  PATTERN_TEST_COVERAGE_REPORT.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_REPORT.md  PKG_RESOURCES_FIX.md  PUBLISHING.md  QUICK_START_GUIDE.md  README.md  README_PYPI.md  RELEASE_NOTES_v1.2.0.md  TEST_COVERAGE_REPORT.md  (+19 more)
claude_code_indexer/.github/: dependabot.yml  pull_request_template.md
claude_code_indexer/.github/workflows/: lint.yml  release.yml  security.yml  test.yml
claude_code_indexer/claude_code_indexer/: __init__.py  background_service.py  cache_manager.py  cache_utils.py  cli.py  cli_migrate.py  crash_handler.py  db_optimizer.py  github_reporter.py  hybrid_cache.py  ignore_handler.py  indexer.py  infrastructure_detector.py  language_detector.py  library_detector.py  llm_memory_storage.py  llm_metadata_enhancer.py  logger.py  mcp_client.py  mcp_installer.py  mcp_persistent_server.py  mcp_proxy.py  mcp_server.py  memory_cache.py  parallel_processor.py  pattern_detector.py  pattern_memory_manager.py  security.py  storage_manager.py  updater.py  weight_calculator.py
claude_code_indexer/claude_code_indexer/commands/: __init__.py  crash.py  god_mode.py  mcp_daemon.py  tmux_orchestrator.py
claude_code_indexer/claude_code_indexer/factories/: __init__.py  parser_factory.py
claude_code_indexer/claude_code_indexer/interfaces/: __init__.py  cache_interface.py  database_interface.py  indexer_interface.py  parser_interface.py
claude_code_indexer/claude_code_indexer/migrations/: __init__.py  base_migration.py  migration_manager.py
claude_code_indexer/claude_code_indexer/parsers/: __init__.py  autoit_parser.py  base_parser.py  java_parser.py  javascript_parser.py  python_parser.py  rust_parser.py
claude_code_indexer/claude_code_indexer/templates/: claude_md_template.md
claude_code_indexer/debug_test/: test.js
claude_code_indexer/docs/: GOD_MODE_TMUX_INTEGRATION.md  GOD_MODE_TMUX_README.md
claude_code_indexer/examples/: god_mode_tmux_demo.py  llm_memory_example.py  pattern_best_practices_example.py
claude_code_indexer/final_test/: CLAUDE.md  app.js  manager.js
claude_code_indexer/plan/: CLAUDE_CODE_INDEXER_PLANNING.md  GITHUB_PLAN_MANAGEMENT.md
claude_code_indexer/scripts/: README.md  benchmark_projects.py  benchmark_search.py  debug_daemon_response.py  demo_god_mode.sh  fair_performance_comparison.py  fast_search.py  final_performance_test.py  optimize_cli_performance.py  optimized_search.py  performance_benchmark.py  profile_mcp_search.py  profile_search.py  publish_full.sh  realistic_benchmark.py  run_tests.py  simple_bottleneck_test.py  simple_performance_comparison.py  simple_performance_test.py  simple_speed_test.sh  test_daemon_performance.py  test_fallback.py  test_mcp_direct.py  test_persistent_performance.py  test_publish_flow.sh  test_search_performance.py  test_search_speed.py  warm_cache_benchmark.py
claude_code_indexer/test-java/: HelloJava.java
claude_code_indexer/test-java/src/: Test.java
claude_code_indexer/test-js-project/src/: main.js
claude_code_indexer/test-js-project/test/: test.js
claude_code_indexer/test-js-upgrade/: app.js
claude_code_indexer/test-multi-lang/: app.py  types.ts  utils.js
claude_code_indexer/test-project/: test.py
claude_code_indexer/test-ts-debug/: test.ts
claude_code_indexer/test_template/: .gitignore  CLAUDE.md
claude_code_indexer/test_verification/: greet.js  test.js
claude_code_indexer/tests/: conftest.py  run_tests.py  test_autoit_parser.py  test_background_service.py  test_background_service_simple.py  test_cli.py  test_cli_simple.py  test_crash_handler.py  test_db_optimizer_simple.py  test_god_mode.py  test_indexer.py  test_infrastructure_detector_simple.py  test_llm_memory_comprehensive.py  test_llm_memory_storage.py  test_llm_metadata_enhancer.py  test_mcp.py  test_mcp_installer.py  test_mcp_memory_tools.py  test_mcp_pattern_tools.py  test_mcp_project_manager.py  test_mcp_tools.py  test_memory_cache_bdd.py  test_memory_cache_integration.py  test_memory_cache_unit.py  test_migration_v1_15_0.py  test_migrations.py  test_multi_language.py  test_node_name_none_handling.py  test_pattern_detector.py  test_pattern_memory_manager.py  test_query_type_filter.py  test_search_optimizations.py  test_security.py  test_update.py  test_updater_simple.py
claude_code_indexer/tests/features/: background_service.feature  cache_management.feature  cli_commands.feature  enhance_commands.feature  enhanced_parameters.feature  index_parameters.feature  mcp_integration.feature  memory_cache.feature  project_management.feature  query_parameters.feature  search_parameters.feature  stats_parameters.feature
claude_code_indexer/tests/step_definitions/: shared_steps.py  test_background_steps.py  test_cache_steps.py  test_cli_steps.py  test_enhance_steps.py  test_enhanced_parameter_steps.py  test_index_parameter_steps.py  test_mcp_steps.py  test_project_steps.py  test_query_parameter_steps.py  test_search_parameter_steps.py  (+1 more)
tasks/: todo.md  (+1 more)
(+21 files in other folders)
