[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-indexer"
version = "1.11.0"
description = "Multi-language code indexing with graph database, supports Python/JavaScript/TypeScript/Java/AutoIt, auto-ignores node_modules/.git, respects .gitignore, multi-keyword search, MCP for Claude Desktop, automated installation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tony Nguyen", email = "tony@startupascent.net"}
]
maintainers = [
    {name = "Tony Nguyen", email = "tony@startupascent.net"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Software Development :: Version Control :: Git",
    "Environment :: Console",
]
keywords = ["code-indexing", "graph-database", "ensmallen", "claude", "code-analysis", "ast", "development-tools"]
requires-python = ">=3.8"
dependencies = [
    "ensmallen>=0.8.0",
    "networkx>=3.0",
    "pandas>=1.5.0",
    "numpy>=1.22.0",
    "scikit-learn>=1.3.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.28.0",  # For auto-update feature
    "packaging>=23.0",  # For version comparison
    "apsw>=3.40.0",  # Performance optimization
    "psutil>=5.9.0",  # For background service process management
    "javalang>=0.13.0",  # For Java AST parsing
]

[project.urls]
Homepage = "https://github.com/tuannx/claude-prompts/tree/main/claude_code_indexer"
Documentation = "https://github.com/tuannx/claude-prompts/tree/main/claude_code_indexer/README.md"
Repository = "https://github.com/tuannx/claude-prompts.git"
Issues = "https://github.com/tuannx/claude-prompts/issues"
Changelog = "https://github.com/tuannx/claude-prompts/blob/main/claude_code_indexer/CHANGELOG.md"

[project.scripts]
claude-code-indexer = "claude_code_indexer.cli:main"
cci = "claude_code_indexer.cli:main"
cci-mcp-server = "claude_code_indexer.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "twine>=4.0",
    "build>=0.10",
]
mcp = [
    "mcp>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[tool.setuptools]
packages = ["claude_code_indexer", "claude_code_indexer.templates", "claude_code_indexer.parsers"]
include-package-data = true

[tool.setuptools.package-data]
claude_code_indexer = ["templates/*.md", "templates/*.sql"]