[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-indexer"
version = "1.21.2"
description = "Multi-language code indexing with graph database, supports Python/JavaScript/TypeScript/Java/AutoIt, auto-ignores node_modules/.git, respects .gitignore, multi-keyword search, MCP for Claude Desktop, automated installation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tony Nguyen", email = "tony@startupascent.net"}
]
maintainers = [
    {name = "Tony Nguyen", email = "tony@startupascent.net"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Software Development :: Version Control :: Git",
    "Environment :: Console",
]
keywords = ["code-indexing", "graph-database", "ensmallen", "claude", "code-analysis", "ast", "development-tools"]
requires-python = ">=3.8"
dependencies = [
    "ensmallen>=0.8.0",
    "networkx>=3.0",
    "pandas>=1.5.0",
    "numpy>=1.22.0",
    "scikit-learn>=1.3.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.28.0",  # For auto-update feature
    "packaging>=23.0",  # For version comparison
    "apsw>=3.40.0",  # Performance optimization
    "psutil>=5.9.0",  # For background service process management
    "javalang>=0.13.0",  # For Java AST parsing
]

[project.urls]
Homepage = "https://github.com/tuannx/claude-prompts/tree/main/claude_code_indexer"
Documentation = "https://github.com/tuannx/claude-prompts/tree/main/claude_code_indexer/README.md"
Repository = "https://github.com/tuannx/claude-prompts.git"
Issues = "https://github.com/tuannx/claude-prompts/issues"
Changelog = "https://github.com/tuannx/claude-prompts/blob/main/claude_code_indexer/CHANGELOG.md"

[project.scripts]
claude-code-indexer = "claude_code_indexer.cli:main"
cci = "claude_code_indexer.cli:main"
cci-mcp-server = "claude_code_indexer.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-bdd>=6.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "twine>=4.0",
    "build>=0.10",
    "bandit[toml]>=1.7.0",
    "safety>=2.3.0",
    "pip-audit>=2.0",
]
mcp = [
    "mcp>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "websockets>=11.0",
    "aiohttp>=3.9.0",
]

[tool.setuptools]
packages = ["claude_code_indexer", "claude_code_indexer.templates", "claude_code_indexer.parsers"]
include-package-data = true

[tool.setuptools.package-data]
claude_code_indexer = ["templates/*.md", "templates/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["claude_code_indexer"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]